cmake_minimum_required(VERSION 3.9)
project(spring_2018_program_3_linked_list_Waltbo)

set(CMAKE_CXX_STANDARD 11)

add_executable(spring_2018_program_3_linked_list_Waltbo
        CppApplication_1/nbproject/private/c_standard_headers_indexer.c
        CppApplication_1/nbproject/private/cpp_standard_headers_indexer.cpp
        CppApplication_1/List.cpp
        CppApplication_1/List.h
        CppApplication_1/main.cpp
        LinkedList.h)
